fixed bug where icon rotates erratically on mobile

--- a/style.css
+++ b/style.css
@@ -132,9 +132,6 @@ main {
 		transition: var(--transition-speed-navbar);
 	}
 
-.navbar:hover .logo svg {
-	transform: rotate(-180deg);
-}
 
 .nav-link svg{
 	width: 2rem;
@@ -302,7 +299,9 @@ svg path{
 	
 	.navbar:hover .logo svg {
 		margin-left:14.5rem;
+		transform: rotate(-180deg);
 	}
+	
 
 	.logo{
 		font-weight: bold;
@@ -323,7 +322,9 @@ svg path{
 		height: 5rem;
 	}
 	
-	
+	.logo:hover svg{
+		transform: rotate(-180deg);
+	}
 	
 	
 	.navbar-nav {
